--- a/README.rdoc
+++ b/README.rdoc
@@ -1,8 +1,8 @@
-Beerswap
+BeerHub
 
-This will be a website will be a way for beer lovers to keep track of which beers they've tried as well as a recommendation engine for trying new beers.
+BeerHub is a place for homebrewers to find and share their favorite homebrew recipes. 
 
-It is my first real web app and I'll be using Ruby on Rails, Heroku, and MongoDB.
+It is my first real web app and I'll be using Ruby on Rails, Heroku, and MongoDB (Mongoid).
 
 Let me know what you think!
 Matt
